# TrackIt

./: TrackIt.sql  pyproject.toml
backend/: TrackIt.db  categories.py  classes.py  database.py  expense_installment.py  register_login.py  route_settings.py  schemas.py  teste.py  utils.py  widgets.py
front-end/: landing.html
front-end/css/: landing.css
front-end/html/: index.html  landing.html
front-end/js/: login_register.js
front-end/static/css/: landing.css
front-end/static/js/: animations.js
frontend/: expenses.html  landing.html  manager.html
frontend/static/css/: expenses.css  landing.css  manager.css
frontend/static/js/: expenses_managing.js  login_register.js  manager_animations.js  manager_data.js  utils.js
frontend/static/js/expenses/: expenses_animations.js  expenses_data.js
frontend/static/js/landing/: animations.js  login_register.js
frontend/static/js/manager/: expenses_managing.js  manager_animations.js  manager_graphic.js
